@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 752cd31fed1b62362e6b51522ebbb7273e69e404 ChangeLog
+SHA1 d6afe09ac0e1285831749147d81830daffa82b2e ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 f33a524126bd793e01b2a4a92db6b833b0226a8f MANIFEST
-SHA1 fa5e15fb8f223faad343ee4f8d476a58aed4f856 META.yml
-SHA1 7eff7fb9944e5a7172f9494a773fd0bb532ffe56 Makefile.PL
+SHA1 a6709455e404339ce494a06264852b84cf4381e8 META.yml
+SHA1 7d32603a9346da13cf1244ad3c88457c5648ab75 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 e2dfe658a7586fd9381e2d8498f9ebe3ae748d9e lib/Net/FullAuto.pm
+SHA1 0cbe3921c1ce75698c67cfbf21749ec406c5aedb lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0L3jkACgkQdsVAdUjO9ImicQCgjDVcTAMbu8VTSo2z3j/uvTJH
-eNoAn1hA6+T8ku/SgRmVm55TSVkLi8k+
-=eufx
+iEYEARECAAYFAk0OqKcACgkQdsVAdUjO9Ik4TgCeKGDXMfAU4FUDE6BdpJIJCojQ
+d+gAn0/dc/H5aRIRWbNG5G3SoTrBBsyN
+=iqLR
 -----END PGP SIGNATURE-----
