@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.82';
+our $VERSION='0.83';
 
 
 use 5.005;
